# rust-string-bench

./: Cargo.toml  LICENSE  README.md  run
.github/workflows/: ci.yml
benches/: compact_str.rs  smartstring.rs  smol_str.rs  std_arc_str.rs  std_string.rs  utf8_bytes.rs
