[package]
name = "rust-string-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
compact_str = "0.9"
criterion = "0.8"
rand = "0.9.2"
smartstring = "1.0.1"
smol_str = "0.3.2"
# TODO: Use the `Utf8Bytes` type from here since afaik there isn't a common crate for it :(
tungstenite = "0.28"

[[bench]]
name = "std_string"
harness = false

[[bench]]
name = "std_arc_str"
harness = false

[[bench]]
name = "smol_str"
harness = false

[[bench]]
name = "compact_str"
harness = false

[[bench]]
name = "smartstring"
harness = false

[[bench]]
name = "utf8_bytes"
harness = false

[profile.bench]
lto = "fat"
